# fridge-chatbot

./: .gitignore  CLAUDE.md  LICENSE  README.md  dev.sh
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  run.sh  seed_screenshot_data.py  server.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_event_parent_id.py  0003_thread_summary.py  0004_voice_locale.py  0005_messages_pagination_index.py  0006_feedback_table.py
backend/scripts/: langfuse_dataset.py
backend/src/: main.py
backend/src/core/: cache.py  context.py  dependencies.py  family_events.py  labels.py  migrations.py  pubsub.py  rate_limit.py  resource_monitor.py  security.py  settings.py  startup_guards.py
backend/src/db/: postgres.py  shared_engine.py
backend/src/llm_graphs/: CLAUDE.md  graph_utils.py  parent_router.py
backend/src/llm_graphs/graphs/: chat_graph.py  voice_graph.py
backend/src/llm_graphs/shared/: locale.py  prompts.py  tools.py
backend/src/llm_graphs/subgraphs/fridge_assistant/: fridge_assistant.py  tools.py
backend/src/models/: __init__.py  car.py  database.py  event.py  family.py  feedback.py  label.py  member.py  note.py
backend/src/routes/: auth.py  calendar_sync.py  cars.py  events.py  family.py  family_events_ws.py  feedback.py  labels.py  livekit_token.py  members.py  notes.py  oauth.py  pairing.py  threads.py  users.py
backend/src/schemas/: auth.py  calendar_sync.py  cars.py  events.py  family.py  feedback.py  labels.py  members.py  notes.py  oauth.py  threads.py  users.py
backend/src/services/: CLAUDE.md  auth_service.py  car_service.py  chat_streaming.py  crypto_service.py  db_operations_service.py  event_service.py  event_target_resolver.py  family_preferences_service.py  family_service.py  feedback_service.py  google_calendar_service.py  google_oauth_service.py  google_token_service.py  label_service.py  langfuse_service.py  langsmith_tracing.py  llm_factory.py  llm_utils.py  logger.py  member_service.py  note_service.py  redis_service.py  thread_summary_service.py
backend/src/utils/: db_state.py  json_utils.py
backend/src/voice_worker/: worker.py
backend/src/workers/: calendar_sync_worker.py  calendar_write_worker.py
backend/tests/: conftest.py
backend/tests/behavioral/: CLAUDE.md  conftest.py  test_chat_graph_behavior.py
backend/tests/contract/: test_contract.py
backend/tests/integration/: test_auth_rate_limit.py  test_calendar_sync.py  test_cars.py  test_chat_ws_first_frame_timeout.py  test_event_recurring_split.py  test_events.py  test_family.py  test_family_events_ws.py  test_feedback.py  test_labels.py  test_members.py  test_notes.py  test_open_items_xfail.py  test_pairing_oauth.py  test_rate_limits.py  test_smoke.py  test_threads_pagination.py
backend/tests/migrations/: test_alembic.py
backend/tests/unit/: test_auth_service.py  test_cache_helper.py  test_crypto_service.py  test_event_target_resolver.py  test_family_event_payload.py  test_labels_helpers.py  test_startup_guards.py
deploy/: CLAUDE.md  Caddyfile  README.md  deploy.sh  docker-compose.prod.yml  fetch-secrets.sh  provision-langfuse-org.sh
(+142 files in other folders)
