[tool.poetry]
name = "fridge-chatbot-backend"
version = "0.1.0"
description = "Backend service for the fridge chatbot. Baseline Python/FastAPI/LangGraph stack for apps in this monorepo."
authors = ["Szymon Smagowski <smagowski.szymon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# Upper bound capped at 3.15 because livekit-agents requires <3.15. Devcontainer
# runs Python 3.14; widening above 3.14 is fine until LiveKit drops support for
# the next interpreter.
python = ">=3.11,<3.15"
fastapi = "^0.136.0"
uvicorn = {extras = ["standard"], version = "^0.44.0"}
sqlalchemy = "^2.0.49"
psycopg = {extras = ["binary", "pool"], version = "^3.3.3"}
pydantic = {extras = ["email"], version = "^2.13.2"}
pydantic-settings = "^2.13.1"
python-multipart = "^0.0.26"
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
# TODO(compliance): Pinned bcrypt<5 because passlib<=1.7.4 probes
# `bcrypt.__about__` for capability detection, which bcrypt 5.x removed,
# triggering AttributeError + a spurious "password longer than 72 bytes"
# fallback. Remove this pin once passlib 1.8+ ships, or when we replace
# passlib with argon2-cffi.
bcrypt = "^4.3.0"
pyjwt = {extras = ["crypto"], version = "^2.12.1"}
httpx = "^0.28.1"
# Pinned <14: uvicorn 0.44's default WS impl uses `websockets`'s legacy
# module which references `transfer_data_task` — removed in websockets 14+,
# crashing the close path. Bump this in lockstep with a uvicorn that uses
# the new sansio interface.
websockets = ">=12,<14"
langchain = "^1.2.15"
langchain-core = "^1.3.0"
langchain-openai = "^1.1.14"
langgraph = "^1.1.8"
langgraph-checkpoint = "^4.0.2"
langfuse = "^3.0.0"
langsmith = "^0.7.32"
ruff = "^0.8.1"
cryptography = ">=43"
redis = ">=5"
slowapi = ">=0.1.9"
google-api-python-client = ">=2.150"
google-auth-oauthlib = ">=1.2"
google-auth = ">=2.35"
alembic = ">=1.13"
wsproto = "^1.3.2"
psutil = "^7.2.2"
# Voice steering — LiveKit Agents framework + plugins. Voice worker is a
# separate process (src/voice_worker/worker.py); not loaded by FastAPI itself,
# but the LangGraph voice_graph it consumes lives under src/llm_graphs/graphs/.
# See .claude/designs/fridge-chatbot-voice-steering.md.
livekit-agents = "^1.4"
livekit-plugins-openai = "^1.4"
livekit-plugins-silero = "^1.4"
livekit-plugins-langchain = "^1.4"
python-dateutil = "^2.9.0.post0"
langchain-community = "^0.4.1"
ddgs = "^9.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "anyio (>=4.13.0,<5.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "behavioral: chat-graph behavioral suite (real OpenAI calls; opt in with '-m behavioral')",
]
